Wrapped nav-bar in containerdiv to fix positions av bubbles. Removed girlwithsword due to graphic design and layout change.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,8 +19,14 @@ body {
     font: size 400px;
 }
 
+#navbar-container {
+    background:white;
+    float:right;
+}
+
 #nav-bar li {
     list-style-type: none;
+    display:inline;
 }
 
 .nav-item {
